# hindsight

./: .env.example  CLAUDE.md  package-lock.json
helm/hindsight/: Chart.yaml
hindsight-all/: pyproject.toml
hindsight-all-slim/: pyproject.toml
hindsight-api/: pyproject.toml
hindsight-api-slim/: pyproject.toml
hindsight-api-slim/hindsight_api/: __init__.py  config.py  main.py  mcp_tools.py
hindsight-api-slim/hindsight_api/engine/: llm_wrapper.py
hindsight-api-slim/hindsight_api/engine/providers/: anthropic_llm.py
hindsight-api/hindsight_api/: config.py  main.py
hindsight-api/hindsight_api/alembic/versions/: c3d4e5f6g7h8_add_history_to_mental_models.py
hindsight-api/hindsight_api/api/: http.py
hindsight-api/hindsight_api/engine/: memory_engine.py
hindsight-api/tests/: test_mental_models.py
hindsight-cli/: Cargo.toml
hindsight-clients/go/: api_banks.go  api_directives.go  api_documents.go  api_entities.go  api_files.go  api_memory.go  api_mental_models.go  api_monitoring.go  api_operations.go  api_webhooks.go  client.go  configuration.go  model_add_background_request.go  model_async_operation_submit_response.go  model_background_response.go  model_bank_config_response.go  model_bank_config_update.go  model_bank_list_item.go  model_bank_list_response.go  model_bank_profile_response.go  model_bank_stats_response.go  model_budget.go  model_cancel_operation_response.go  model_child_operation_status.go  model_chunk_data.go  model_chunk_include_options.go  model_chunk_response.go  model_clear_memory_observations_response.go  model_consolidation_response.go  model_create_bank_request.go  model_create_directive_request.go  model_create_mental_model_request.go  model_create_mental_model_response.go  model_create_webhook_request.go  model_delete_document_response.go  model_delete_response.go  model_directive_list_response.go  model_directive_response.go  model_disposition_traits.go  model_document_response.go  (+66 more)
hindsight-clients/go/api/: openapi.yaml
hindsight-clients/python/: pyproject.toml
hindsight-clients/python/hindsight_client/: hindsight_client.py
hindsight-clients/python/hindsight_client_api/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
hindsight-clients/python/hindsight_client_api/api/: banks_api.py  directives_api.py  documents_api.py  entities_api.py  files_api.py  memory_api.py  mental_models_api.py  monitoring_api.py  operations_api.py  webhooks_api.py
hindsight-clients/python/hindsight_client_api/models/: __init__.py  add_background_request.py  async_operation_submit_response.py  background_response.py  bank_config_response.py  bank_config_update.py  bank_list_item.py  bank_list_response.py  bank_profile_response.py  bank_stats_response.py  budget.py  cancel_operation_response.py  child_operation_status.py  chunk_data.py  chunk_include_options.py  chunk_response.py  clear_memory_observations_response.py  consolidation_response.py  create_bank_request.py  create_directive_request.py  create_mental_model_request.py  create_mental_model_response.py  create_webhook_request.py  delete_document_response.py  delete_response.py  directive_list_response.py  directive_response.py  disposition_traits.py  document_response.py  entity_detail_response.py  entity_include_options.py  entity_input.py  entity_list_item.py  entity_list_response.py  entity_observation_response.py  entity_state_response.py  features_info.py  file_retain_response.py  graph_data_response.py  http_validation_error.py  (+53 more)
hindsight-clients/typescript/: package.json
hindsight-control-plane/: package.json
hindsight-control-plane/src/app/api/banks/[bankId]/mental-models/[mentalModelId]/history/: route.ts
hindsight-control-plane/src/components/: mental-model-detail-modal.tsx  mental-models-view.tsx
hindsight-control-plane/src/lib/: api.ts
hindsight-dev/: pyproject.toml
hindsight-docs/blog/: 2026-03-03-litellm.md
hindsight-docs/docs/developer/: configuration.md
hindsight-docs/docs/developer/api/: mental-models.mdx
hindsight-docs/examples/api/: mental-models.py
hindsight-docs/static/: openapi.json
hindsight-embed/: pyproject.toml
hindsight-embed/hindsight_embed/: __init__.py
hindsight-integrations/ai-sdk/: package.json
hindsight-integrations/chat/: package.json
hindsight-integrations/crewai/: pyproject.toml
hindsight-integrations/litellm/: pyproject.toml
hindsight-integrations/openclaw/: package.json
hindsight-integrations/pydantic-ai/: pyproject.toml
