[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hindsight-api"
version = "0.4.18"
description = "Hindsight: Agent Memory That Works Like Human Memory"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hindsight-api-slim[all]>=0.4.17",
]

[tool.uv.sources]
hindsight-api-slim = { workspace = true }

[tool.setuptools]
packages = []
